--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     compile 'commons-codec:commons-codec:1.13'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 }
