--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "cmu.sem.fridgely"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
@@ -37,13 +37,17 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-    compile 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
-    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
+    implementation 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    compile 'commons-codec:commons-codec:1.13'
+    implementation 'commons-codec:commons-codec:1.13'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
+    implementation 'com.android.support:design:28.0.0'
 
 }
