--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.android.volley:volley:1.1.1'
 
@@ -48,6 +48,6 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
