--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "cmu.sem.fridgely"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         vectorDrawables.useSupportLibrary true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     implementation 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
     testImplementation 'junit:junit:4.12'
@@ -49,5 +49,5 @@ dependencies {
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
     implementation 'com.google.android.material:material:1.0.0'
-
+    implementation 'id.zelory:compressor:2.1.0'
 }
