--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:usesCleartextTraffic="true"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
         android:label="@string/app_name"
